--- a/FNP_2020_FinCausal/baseline/README.adoc
+++ b/FNP_2020_FinCausal/baseline/README.adoc
@@ -3,6 +3,9 @@ Baselines
 
 Baseline models for tasks 1 and 2.
 
-Both baselines are evaluated on trial data and run on python 3.6. We advise to install a virtual environment before running the project.
+Both baselines are evaluated on trial data and run on python 3.6. We advise to create a virtual environment before running the project.
 
-To install the project dependencies, run `pip install -r requirements.txt`
+First install pytorch anf torchvision according to your hardware (check on)
+link:https://pytorch.org/[pytorch] website
+
+Install the project dependencies, running `pip install -r requirements.txt`
