--- a/FNP_2020_FinCausal/scoring/README.adoc
+++ b/FNP_2020_FinCausal/scoring/README.adoc
@@ -9,10 +9,10 @@ Install the project dependencies, running `pip install -r requirements.txt`
 
 
 ----
-    usage: task?_evaluate.py from-file [-h] ref_file pred_file [score_file]
+    usage: task?_evaluate.py from-file [-h] [--ref_file REF_FILE] pred_file [score_file]
 
     positional arguments:
-      ref_file    reference file
+      ref_file    reference file (default: ../../data/fnp2020-fincausal-task?.csv)
       pred_file   prediction file to evaluate
       score_file  path to output score file (or stdout if not provided)
 
